crates/etl-api/tests/snapshots/main__destinations__an_existing_bigquery_destination_can_be_read.snap
---
source: crates/etl-api/tests/destinations.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: None,
    max_concurrent_streams: Some(
        1,
    ),
}
