crates/etl-api/tests/snapshots/main__destinations__an_existing_iceberg_supabase_destination_can_be_updated.snap
---
source: crates/etl-api/tests/destinations.rs
expression: response.config
---
Iceberg {
    config: Supabase {
        project_ref: "tsrqponmlkjihgfedcba",
        warehouse_name: "my-updated-warehouse",
        namespace: Some(
            "my-updated-namespace",
        ),
        s3_region: "us-west-2",
    },
}
