crates/etl-api/tests/snapshots/main__destinations__an_existing_snowflake_destination_can_be_read.snap
---
source: crates/etl-api/tests/destinations.rs
expression: response.config
---
Snowflake {
    account_id: "myorg-myaccount",
    user: "etl_user",
    database: "my_database",
    schema: "public",
    role: Some(
        "etl_role",
    ),
}
