crates/etl-api/tests/snapshots/main__destinations__an_existing_snowflake_destination_can_be_updated.snap
---
source: crates/etl-api/tests/destinations.rs
expression: response.config
---
Snowflake {
    account_id: "updatedorg-updatedaccount",
    user: "updated_etl_user",
    database: "updated_database",
    schema: "updated_schema",
    role: Some(
        "updated_role",
    ),
}
